--- a/rock-paper-scissors-master/pom.xml
+++ b/rock-paper-scissors-master/pom.xml
@@ -33,6 +33,10 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+	 <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.21.0</version>
+        </plugin>
 		<plugin>
 		    <groupId>com.spotify</groupId>
 		    <artifactId>dockerfile-maven-plugin</artifactId>
