--- a/rock-paper-scissors-master/pom.xml
+++ b/rock-paper-scissors-master/pom.xml
@@ -43,6 +43,9 @@
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
+		<configuration>
+		  <webXml> src\rock-paper-scissors-master\web.xml </webXml>
+		</configuration>
           <version>3.2.0</version>
         </plugin>
         <plugin>
