--- a/rock-paper-scissors-master/pom.xml
+++ b/rock-paper-scissors-master/pom.xml
@@ -44,7 +44,8 @@
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
 		<configuration>
-		  <webXml> src\rock-paper-scissors-master\web.xml </webXml>
+		  <!-- <webXml> src\rock-paper-scissors-master\web.xml </webXml> -->
+		  <failOnMissingWebXml> false </failOnMissingWebXml>
 		</configuration>
           <version>3.2.0</version>
         </plugin>
