--- a/rock-paper-scissors-master/Dockerfile
+++ b/rock-paper-scissors-master/Dockerfile
@@ -2,7 +2,7 @@ FROM tomcat:8.0-alpine
 
 LABEL maintainer=”gweber@student.neumont.edu”
 
-ADD /var/lib/jenkins/workspace/Github Pull/rock-paper-scissors-master/target/roshambo-1.0-SNAPSHOT.war /usr/local/tomcat/webapps/
+ADD "/var/lib/jenkins/workspace/Github Pull/rock-paper-scissors-master/target/roshambo-1.0-SNAPSHOT.war" /usr/local/tomcat/webapps/
 
 EXPOSE 8080
 
