--- a/rock-paper-scissors-master/pom.xml
+++ b/rock-paper-scissors-master/pom.xml
@@ -8,6 +8,11 @@
 
 	<name>roshambo</name>
 
+  <distributionManagement>
+    <relocation>
+      <groupId>target</groupId>
+    </relocation>
+  </distributionManagement>
 
 	<dependencies>
 		<dependency>
